# everybody-codes

./: .gitignore  .gitmodules  Cargo.toml  bacon.toml  flake.nix
.direnv/: flake-profile-1-link
nvim/: init.lua
nvim/lua/: dev.lua
src/: aabb.rs  algorithms.rs  cartesian.rs  cellular_automata.rs  collections.rs  comp.rs  cube.rs  debug_as_display.rs  grid2d.rs  imap.rs  inputs.rs  iter.rs  lib.rs  nom.rs  nums.rs  numset.rs  numset_bytes.rs  path.rs  points.rs  prelude.rs  span.rs  spantree.rs  take_upto_n.rs
