[package]
name = "everybody-codes"
version = "0.1.0"
edition = "2021"

[dependencies]
ansi_term = "0.12.1"
ansiterm = "0.12.2"
indicatif = "0.17.9"
itertools = "0.13.0"
modinverse = "0.1.1"
ndarray = "0.16.1"
nom = "8"
num = "0.4.3"
num_enum = "0.7.3"
parse-display = "0.10.0"
pathfinding = "4.11.0"
petgraph = "0.8.3"
platform-dirs = "0.3.0"
proptest = "1.5.0"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rayon = "1.10.0"
reformation = "0.5.3"
tiny-skia = "0.11.4"

[profile.release]
debug = true
