[package]
name = "everybody-codes"
version = "0.1.0"
edition = "2024"

[dependencies]
nu-ansi-term = "0.50.3"
ansiterm = "0.12.2"
indicatif = "0.18"
itertools = "0.14.0"
modinverse = "0.1.1"
ndarray = "0.17.2"
nom = "8"
num = "0.4.3"
num_enum = "0.7.5"
parse-display = "0.10.0"
pathfinding = "4.14.0"
petgraph = "0.8.3"
platform-dirs = "0.3.0"
proptest = "1.10.0"
quickcheck = "1.1.0"
quickcheck_macros = "1.2.0"
rayon = "1.11.0"
reformation = "0.5.3"
tiny-skia = "0.12"

[profile.release]
debug = true
